[package]
name = "bbs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.3"
bbs = { version = "0.4.1" }
rand = { version = "0.7" }
pairing-plus = "0.19"
serde = { version = "1.0", features = ["derive"] }
arrayref = "0.3"
hkdf = "0.8"
sha2 = "0.8"
base64 = "0.21.4"
once_cell = "1.18.0"
serde_json = { version = "1.0.107", features = ["preserve_order"] }
