[package]
name = "bbs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
bbs = { version = "0.4.1" }
rand = { version = "0.8" }
pairing-plus = "0.19"
serde = { version = "1.0", features = ["derive"] }
arrayref = "0.3"
hkdf = "0.8"
sha2 = "0.8"
base64 = "0.21.4"
once_cell = "1.18.0"
serde_json = { version = "1.0.107", features = ["preserve_order"] }
dock_crypto_utils = "0.16.0"
proof_system = "0.24.0"
bbs_plus = "0.18.0"
ark-ec = { version = "^0.4.1" }
ark-ff = { version = "^0.4.1" }
ark-relations = { version = "^0.4.0" }
ark-bls12-381 = { version = "^0.4.0", default-features = false, features = [ "curve" ] }
ark-serialize = { version = "^0.4.0", default-features = false, features = [ "derive" ] }
ark-std = "0.4.0"
blake2 = "0.10.6"
digest = "0.10.7"
urlencoding = "2.1.3"
schnorr_pok = "0.16.0"
itertools = "0.12.0"
rocket_dyn_templates = { version = "0.1.0", features = ["handlebars"] }
lazy_static = "1.4.0"
uuid = { version = "1.6.1", features = ["v4"] }
bls12_381 = { version = "0.8.0", features = ["experimental"] }
subtle = "2.5.0"
group = "0.13.0"
sha3 = "0.9"
ff = "0.13.0"
reqwest = { version = "0.11.23", features = ["blocking"] }
futures = "0.3.30"

[features]
std = ["ark-ff/std", "ark-ec/std", "ark-std/std", "ark-serialize/std", "serde/std"]
